# Euler

./: CMakeLists.txt  Website.url  build.bat
src/: CMakeLists.txt
src/problem1/: main.cxx
src/problem2/: main.cxx
src/problem3/: main.cxx
src/problem4/: main.cxx
src/problem5/: main.cxx
src/problem6/: main.cxx
